css/main.css
/* FONTS USED *****************************************************************
font-family: 'Coming Soon', cursive;
font-family: 'Short Stack', cursive;
*/

.body {
	background-color: #A4E3FF;
	background-size: 100%;
	background-repeat: repeat;
}

.main {
	position: relative;
	min-width: 820px;
	max-height: auto;
	margin: auto;
	font-family: 'Short Stack', cursive;
	text-align: center;
}

.titleBanner {
    display: inline-block;
    width: 590px;
    font-family: 'Short Stack', cursive;
    font-weight: bolder;
    font-size: 35px;
    text-align: center;
}
#bannerBug1 {
	display: inline-block;
	width: 50px;
	height: 50px;
	background-image: url("../images/redbug02.png");
	background-size: 100%;
	background-repeat: no-repeat;
}
#bannerBug2{
	display: inline-block;
	width: 50px;
	height: 50px;
	background-image: url("../images/bluebug03.png");
	background-size: 100%;
	background-repeat: no-repeat;
}
#bannerBug3{
	display: inline-block;
	width: 50px;
	height: 50px;
	background-image: url("../images/yellowbug03.png");
	background-size: 100%;
	background-repeat: no-repeat;
}
#bannerBug4{
	display: inline-block;
	width: 50px;
	height: 50px;
	background-image: url("../images/purplebug04.png");
	background-size: 100%;
	background-repeat: no-repeat;
}

h1 {
margin: 0px;
}
/* TOP BUTTON MENU *****************************************************************/
#buttonMenu {
    position: relative;
    display: inline-block;
    float: top;
    width: auto;
    height: auto;
    border-radius: 30px;
    padding-top: 5px;
    margin-bottom: 5px;
}

#howToButton {
    display: inline-block;
    width: 110px;
    height: 20px;
    background-color: #FFFACD;
    border: 4px dotted DarkGoldenrod;
    border-radius: 30px;
    padding: 5px;
    font-family: 'Short Stack', cursive;
    font-size: 15px;
    font-weight: bold;
    color: DarkGoldenrod;
}

#startButton {
	display: inline-block;
	width: 150px;
	height: 40px;
	background-color: #98FB98;
	border: 5px dotted #006400;
	border-radius: 30px;
	margin-bottom: 10px;
	font-family: 'Short Stack', cursive;
	color: #006400;
	font-size: 30px;
	font-weight: bolder;
	padding-top: 3px; 
}

#restartButton {
    display: inline-block;
    width: 110px;
    height: 20px;
    background-color: #F08080;
    border: 4px dotted #8B0000;
    border-radius: 30px;
    padding: 5px;
    font-family: 'Short Stack', cursive;
    color: #8B0000;
    font-size: 15px;
    font-weight: bold;
}

/* TOP MENU *****************************************************************/

#topOfBoard {
	position: relative;
	display: inline-block;
	float: top;
	width: 500px;
	height: 90px;
	border: 5px dotted black;
	background: rgba(255,255,255,.8);
	border-radius: 30px;
	padding-top: 5px; 
	margin-bottom: 10px;
}

.topOfMenu {
	display: inline-block; 
	width: 150px;
	height: 30px;
	vertical-align: center;
	line-height: 30px;
	font-family: 'Coming Soon', cursive;
	font-weight: bold;
	font-size: 20px;
	text-align: center;
}

.topMenu {
	display: inline-block; 
	width: 150px;
	height: 50px;
	font-family: 'Short Stack', cursive;
	font-size: 17px;
	line-height: 50px;
	text-align: center;
	vertical-align: center;

}

#playerTurnTop {
	display: inline-block;
	text-align: center;
	vertical-align: center;
}

#playerTurnDisplay {
	display: inline-block;
	border: 3px solid black;
	border-radius: 30px;
	font-weight: bolder;
	text-align: center;
	vertical-align: center;
}

#colorDisplayTop {
	display: inline-block;
	text-align: center;
	vertical-align: center;
}

#colorDisplay {
	display: inline-block;
	border: 3px solid black;
	border-radius: 30px;
	font-weight: bolder;
	text-align: center;
	vertical-align: center;
}

#stinkCountTop {
	display: inline-block;
	text-align: center;
	vertical-align: center;
}

#stinkCountDisplay {
	display: inline-block;
	border: 3px solid black;
	border-radius: 30px;
	font-weight: bolder;
	text-align: center;
	vertical-align: center;
}



/* BOARD CONTAINERS *****************************************************************/

#innerContainer {
	position: relative;
	min-width: 820px; 
	max-height: auto;
	margin: auto;
	text-align: center;
}

.board {
	position: relative;
	display: inline-block;
	float: center;
	width: 500px;
	border: 10px dotted #A4E3FF;
	background: rgba(255,255,255,.4);
	margin: auto;
	padding: 5px;
	text-align: center;
}

.cells {
	display: inline-block;
	width: 100px;
	height: 100px;
	border-radius: 50%;
	background-size: contain;
	margin: 5px;
	line-height: 100px;
	text-align: center;
	vertical-align: center;
}

/* PLAYER CONTAINERS *****************************************************************/

.container {
    position: relative;
    display: inline-block;
    width: 131px;
    height: auto;
    background: rgba(255,255,255,.8);
	border: 5px dotted black;
    border-radius: 30px;
    padding-top: 15px;
    text-align: center;
    vertical-align: top;
}

#containerLeft {
	margin-right: 25px;
}

#containerRight {
	margin-left: 25px;
}
.score {
    display: inline-block;
    width: 115px;
    height: 50px;
    border: 1px solid black;
    border-radius: 30px;
    margin-bottom: 10px;
    font-family: 'Short Stack', cursive;
	font-weight: bold;
    word-wrap: break-word;
    text-align: center;
    vertical-align: center;
    line-height: 50px;
    overflow: auto;
}

.player1 {
	background-color: #90EE90;
}

.player2 {
	background-color: #FF8C00;
}

.collect {
	font-family: 'Coming Soon', cursive;
	font-weight: bold;
}

/* BACKGROUND COLORS FOR JAVASCRIPT *****************************************************************/

.purple {
	background-color: purple;
	color: white;
}

.yellow {
	background-color: yellow;
	color: black;
}
.blue {
	background-color: blue;
	color: yellow;
}
.red {
	background-color: red;
	color: white;
}

/* POP UP MESSAGES *****************************************************************/

h3 {
	font-family: 'Short Stack', cursive;
	font-weight: bolder;
}

h4 {
	font-family: 'Short Stack', cursive;
	font-weight: bolder;
}

p {
	font-family: 'Short Stack', cursive;
	font-size: 18px;
}

ul {
	text-align: left;
}

#startMessage {
    position: relative;
	display: none;
    width: 300px;
    height: 315px;
    margin: 0 auto 0;
    top: -500px;
    border: double 10px black;
    border-radius: 30px;
    background-color: #FFFFE0;
    padding: 0 10px;
}

#coopBtn {
	margin-right: 15px;
}

#vsBtn {
	margin-left: 15px;
}


#howToMessage {
    position: relative;
    display: none;
    width: 340px;
    height: 370px;
    margin: 0 auto 0;
    top: -500px;
    border: double 10px black;
    border-radius: 30px;
    background-color: #FFFFE0;
    padding: 0 10px 10px;
}

#howToOKBtn {
	margin-top: 15px; 
}

#noMatchMessage {
    position: relative;
    display: none;
    width: 275px;
    height: 210px;
    padding: 0 15px;
    margin: 0 auto 0;
    top: -500px;
    border: double 10px black;
    border-radius: 30px;
    background-color: #DCDCDC;
}

#p1StinkMessage {
    position: relative;
    display: none;
    width: 275px;
    height: 250px;
    padding: 0 15px;
    margin: 0 auto 0;
    top: -500px;
    border: double 10px black;
    border-radius: 30px;
    background-color: #FFC145;
}

#p2StinkMessage {
    position: relative;
	display: none;
    width: 275px;
    height: 250px;
    padding: 0 15px;
    margin: 0 auto 0;
    top: -500px;
    border: double 10px black;
    border-radius: 30px;
    background-color: #90EE90;
}

#coopStinkMessage {
    position: relative;
	display: none;
    width: 275px;
    height: 275px;
    padding: 0 15px;
    margin: 0 auto 0;
    top: -500px;
    border: double 10px black;
    border-radius: 30px;
    background-color: #DCDCDC;
}

#allClearMessage {
    position: relative;
	display: none;
    width: 300px;
    height: 270px;
    margin: 0 auto 0;
    top: -500px;
    border: double 10px black;
    border-radius: 30px;
    background-color: #FFFFE0;
}

